@@ -504,6 +504,7 @@ ORDINARY_PROGS = \
 	write_binary_int8 \
 	write_binary_multibyte_int \
 	write_binary_uint8 \
+	write_binary_utf8 \
 	write_float_special \
 	write_reg1 \
 	write_reg2 \
