@@ -1,0 +1,14 @@
+1: 0x61
+2: 0xCE
+3: 0xA9
+4: 0xE2
+5: 0x88
+6: 0x80
+7: 0xF0
+8: 0x9D
+9: 0x84
+10: 0x9E
+11: 0xF0
+12: 0x9F
+13: 0x98
+14: 0x80
